Improve Resource Parameterization

--- a/org.jrebirth/analyzer/src/main/resources/jrebirth.properties
+++ b/org.jrebirth/analyzer/src/main/resources/jrebirth.properties
@@ -14,9 +14,9 @@
 ###								Global Application Management									###
 ###################################################################################################
 
-applicationStageHeight=600
-applicationStageWidth=800
-#applicationStageColor=
+applicationSceneHeight=600
+applicationSceneWidth=800
+applicationSceneBgColor=FFF||1.0
 
 
 ###################################################################################################
