--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -24,9 +24,9 @@ applicationName={} powered by JRebirth
 ###										Main Stage Management									###
 ###################################################################################################
 
-applicationStageWidth=1024
-applicationStageHeight=768
-applicationStageColor=
+applicationSceneWidth=1024
+applicationSceneHeight=768
+applicationSceneBgColor=000000||0.0
 
 
 ###################################################################################################
