Synchro archetype with current sample artifact

--- a/org.jrebirth/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
+++ b/org.jrebirth/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
@@ -7,28 +7,63 @@
 ###																								###
 ###																								###
 ###################################################################################################
-
-
+##
 ###################################################################################################
 ###									Application Core Management									###
 ###################################################################################################
-
-developerMode=true
+##
+## Allow to auto refresh resource when resource params is updated.
+autoRefreshResource=false
+## Developer provides more information when dynamic API is broken (Wave Contract).
+developerMode=false
+## The handler used while running in developer mode to manage unprocessed wave.
+followUpServiceTasks=false
+## When true log code will be resolved according to Message_rb properties files. <br />
+## Disable it to improve performances, log could be translated later.
+logResolution=true
+## The handler used while running in developer mode to manage unprocessed wave.
+unprocessedWaveHandler=org.jrebirth.core.link.DefaultUnprocessedWaveHandler
+## The factory used to create components.
+componentFactory=org.jrebirth.core.facade.DefaultComponentFactory
+## First Close Retry Delay in milliseconds, time to wait when application try to close the first time.
+closeRetryDelayFirst=4000
+## Close Retry Delay in milliseconds, time to wait when application try to close all other time.
+closeRetryDelayOther=1000
+## Pool size of JRebirth Thread Pool.
 threadPoolSize=4
-
+## This parameter is used to add a prefix to custom wave handler method of JRebirth components. They will be named like this : doMyAction(Wave) after being renamed in camel case.
+waveHandlerPrefix=DO_
+##
 ###################################################################################################
-###								Global Application Management									###
+###								Application Resource Parameters									###
 ###################################################################################################
-
-defaultStageHeight=600
-defaultStageWidth=800
-defaultStageColor=
-
-
-###################################################################################################
-###										Font Management											###
-###################################################################################################
-
-fontsFolder=font
+##
+## Fonts default folder, Multiple folder can be managed by separating them with a comma ','.
+fontsFolder=fonts
+## Images default folder, Multiple folder can be managed by separating them with a comma ','.
+imagesFolder=images
+## This parameter is used to define the image to use when an image is missing.
+notAvailableImage=NotAvailableImage||png
+## Styles default folder, Multiple folder can be managed by separating them with a comma ','.
+stylesFolder=styles
+## This parameter is used to parameterize the name of the default style sheet.
+defaultStyleSheet=default
+## This parameter is used to define the font file extension .
 trueTypeFontExtension=.ttf
-
+##
+###################################################################################################
+###									Application Stage Parameters								###
+###################################################################################################
+##
+## This parameter defines the title of the application displayed by stage window.
+## The default value contains a {} that will be replaced by application class simple name.
+applicationName={} powered by JRebirth
+## The <code>APPLICATION_VERSION</code> field is used to define the application version.
+applicationVersion=1.0
+## The application scene width.
+applicationSceneWidth=800
+## The application scene height.
+applicationSceneHeight=600
+## The application scene background color.
+applicationSceneBgColor=FFF||1.0
+##
