--- a/org.jrebirth/showcase/fxml/pom.xml
+++ b/org.jrebirth/showcase/fxml/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>showcase</artifactId>
-		<version>0.7.5-SNAPSHOT</version>
+		<version>0.7.5</version>
 	</parent>
 
 	<groupId>org.jrebirth.showcase</groupId>
