--- a/org.jrebirth/showcase/undoredo/pom.xml
+++ b/org.jrebirth/showcase/undoredo/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>showcase</artifactId>
-		<version>0.7.5-SNAPSHOT</version>
+		<version>0.7.5</version>
 	</parent>
 	
 	<groupId>org.jrebirth.showcase</groupId>
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>undoredo</artifactId>
-			<version>0.7.5-SNAPSHOT</version>
+			<version>0.7.5</version>
 		</dependency>
 	</dependencies>
 
