--- a/org.jrebirth/transition/pom.xml
+++ b/org.jrebirth/transition/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.5-SNAPSHOT</version>
+			<version>0.7.5</version>
 		</dependency>
 
 		<dependency>
