--- a/org.jrebirth/undoredo/pom.xml
+++ b/org.jrebirth/undoredo/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.5-SNAPSHOT</version>
+		<version>0.7.5</version>
 	</parent>
 	<groupId>org.jrebirth</groupId>
 	<artifactId>undoredo</artifactId>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.5-SNAPSHOT</version>
+			<version>0.7.5</version>
 		</dependency>
 	</dependencies>
 </project>
