--- a/org.jrebirth/showcase/fxml/pom.xml
+++ b/org.jrebirth/showcase/fxml/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>component</artifactId>
-			<version>0.7.5-SNAPSHOT</version>
+			<version>0.7.5</version>
 		</dependency>
 	</dependencies>
 
