--- a/org.jrebirth/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/org.jrebirth/archetype/src/main/resources/archetype-resources/pom.xml
@@ -164,7 +164,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.5</version>
+			<version>0.7.6-SNAPSHOT</version>
 		</dependency>
 		
 	</dependencies>
