--- a/org.jrebirth/showcase/fxml/pom.xml
+++ b/org.jrebirth/showcase/fxml/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>showcase</artifactId>
-		<version>0.7.5</version>
+		<version>0.7.6-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jrebirth.showcase</groupId>
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>component</artifactId>
-			<version>0.7.5</version>
+			<version>0.7.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
