--- a/org.jrebirth/core/pom.xml
+++ b/org.jrebirth/core/pom.xml
@@ -14,6 +14,13 @@
 
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.jrebirth</groupId>
+			<artifactId>preloader</artifactId>
+			<version>0.7.6-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -27,7 +34,7 @@
 			<version>1.0.13</version>
 			<!-- <optional>true</optional> -->
 		</dependency>
-		
+
 	</dependencies>
 
 </project>
