Add JRebirth Preloader (first draft)

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -48,6 +48,7 @@
 		<module>fxform</module>
 		<module>undoredo</module>
 		<module>showcase</module>
+		<module>preloader</module>
 	</modules>
 
 	<issueManagement>
