Add JRebirth Preloader to Analyzer Application

--- a/org.jrebirth/sample/pom.xml
+++ b/org.jrebirth/sample/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-        <artifactId>jrebirth</artifactId>
-        <groupId>org</groupId>
-        <version>0.7.6-SNAPSHOT</version>
-    </parent>
+		<artifactId>jrebirth</artifactId>
+		<groupId>org</groupId>
+		<version>0.7.6-SNAPSHOT</version>
+	</parent>
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>sample</artifactId>
@@ -17,7 +17,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<deployUrl>http://apps.sample.org</deployUrl>
 		<deployPath>${project.artifactId}/${project.version}</deployPath>
 
@@ -29,7 +29,7 @@
 
 		<updateCheck>timeout</updateCheck>
 		<updatePolicy>prompt-update</updatePolicy>
-		
+
 	</properties>
 
 	<organization>
@@ -164,13 +164,19 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.13</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
 			<version>0.7.6-SNAPSHOT</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.jrebirth</groupId>
+			<artifactId>preloader</artifactId>
+			<version>0.7.6-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
