--- a/org.jrebirth/analyzer/pom.xml
+++ b/org.jrebirth/analyzer/pom.xml
@@ -13,11 +13,22 @@
 
 	<properties>
 
-		<permissions>all-permissions</permissions> <!-- sandbox -->
-		<deployUrl>http://apps.jrebirth.org</deployUrl>
-		<deployPath>${project.artifactId}/${project.version}</deployPath>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+		<keystore>${project.basedir}/analyzer.jks</keystore>
+		<storepass>defaultpass</storepass>
+		<storetype>JKS</storetype>
+		<keyalias>analyzer</keyalias>
+		<keypass>defaultpass</keypass>
+		<deletekeystore>true</deletekeystore>
+		<genkeystore>true</genkeystore>
+
+		<permissions>all-permissions</permissions> <!-- sandbox -->
+ 		<deployUrl>http://apps.jrebirth.org</deployUrl>
+		<deployPath>${project.artifactId}/${project.version}</deployPath>
+		
 		<jnlpFilename>JRebirthAnalyzer.jnlp</jnlpFilename>
+		<preloaderClass>org.jrebirth.preloader.JRebirthPreloader</preloaderClass>
 		<appClass>org.jrebirth.analyzer.JRebirthAnalyzer</appClass>
 
 		<appletWidth>1024</appletWidth>
@@ -106,7 +117,7 @@
 					<excludeTransitive>false</excludeTransitive>
 					<libPath>lib</libPath>
 
-					<resourcesDirectory>${project.basedir}/src/main/jnlp/</resourcesDirectory>
+					<resourcesDirectory>${project.basedir}/src/main/jnlp/resources</resourcesDirectory>
 					<codebase>${deployUrl}/${deployPath}</codebase>
 
 					<jnlp>
@@ -119,30 +130,33 @@
 					</jnlp>
 
 					<sign>
-						<keystore>${basedir}/jrebirth.jks</keystore>
+											<keystore>${keystore}</keystore>
+						<!-- MUST BE PROVIDED BY COMMAND LINE ARGUMENTS -->
+						<!-- -Dstorepass=xxx -Dkeypass=xxx -->
 						<keypass>${keypass}</keypass>
 						<storepass>${storepass}</storepass>
-						<!-- <storetype>fillme</storetype> -->
-						<alias>jrebirth</alias>
+						<storetype>${storetype}</storetype>
+						<!-- <alias>id unizeto technologies s.a. de open source developer, bordes sébastien</alias> -->
+						<alias>${keyalias}</alias>
 
 						<validity>360</validity>
-						<dnameCn>www.jrebirth.org</dnameCn>
-						<dnameOu>None</dnameOu>
+						<dnameCn>JRebirth Self-signed Certificate</dnameCn>
+						<dnameOu>JRebirth OSS</dnameOu>
 						<dnameO>JRebirth</dnameO>
 						<dnameL>Toulouse</dnameL>
-						<dnameSt>HG</dnameSt>
+						<dnameSt>Haute-Garonne</dnameSt>
 						<dnameC>FR</dnameC>
 
 						<verify>true</verify>
 
 						<keystoreConfig>
-							<delete>true</delete>
-							<gen>true</gen>
+							<delete>${deletekeystore}</delete>
+							<gen>${genkeystore}</gen>
 						</keystoreConfig>
 					</sign>
 
-					<pack200>false</pack200>
-					<gzip>false</gzip>
+					<pack200>true</pack200>
+					<gzip>true</gzip>
 
 					<outputJarVersions>false</outputJarVersions>
 					<install>false</install>
@@ -160,6 +174,12 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
+			<version>0.7.6-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jrebirth</groupId>
+			<artifactId>preloader</artifactId>
 			<version>0.7.6-SNAPSHOT</version>
 		</dependency>
 
