--- a/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
+++ b/org.jrebirth/core/src/test/resources/config/test-jrebirth.properties
@@ -15,7 +15,7 @@
 developerMode=false
 closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
-threadPoolSize=4
+threadPoolSizeRatio=2
 waveHandlerPrefix=DO_
 notAvailableImage=image/||NotAvailable||png
 applicationName={} powered by JRebirth
