--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>org.jrebirth</groupId>
 		<artifactId>parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<groupId>org</groupId>
@@ -102,6 +101,63 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
+<!-- 
+			<plugin>
+				<groupId>org.apache.maven.doxia</groupId>
+				<artifactId>doxia-book-maven-plugin</artifactId>
+				<version>1.3-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<phase>pre-site</phase>
+						<goals>
+							<goal>render-books</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<books>
+						<book>
+							<directory>src/site/jrebirth-book</directory>
+							<descriptor>src/site/jrebirth-book.xml</descriptor>
+							<formats>
+								<format>
+									<id>latex</id>
+								</format>
+								<format>
+									<id>xdoc</id>
+								</format>
+								<format>
+									<id>pdf</id>
+								</format>
+								<format>
+									<id>rtf</id>
+								</format>
+							</formats>
+						</book>
+					</books>
+				</configuration>
+
+				<dependencies>
+
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-core</artifactId>
+						<version>1.4</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-module-fml</artifactId>
+						<version>1.4</version>
+					</dependency>
+					<dependency>
+						<groupId>org.tinyjee.dim</groupId>
+						<artifactId>doxia-include-macro</artifactId>
+						<version>1.1</version>
+					</dependency>
+				</dependencies>
+
+			</plugin>
+ -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
