--- a/org.jrebirth/distribution/pom.xml
+++ b/org.jrebirth/distribution/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.6-SNAPSHOT</version>
+		<version>0.7.6</version>
 		<relativePath>../</relativePath>
 	</parent>
 
