--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<groupId>org</groupId>
 	<artifactId>jrebirth</artifactId>
-	<version>0.7.6-SNAPSHOT</version>
+	<version>0.7.6</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
