--- a/org.jrebirth/preloader/pom.xml
+++ b/org.jrebirth/preloader/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org</groupId>
     <artifactId>jrebirth</artifactId>
-    <version>0.7.6-SNAPSHOT</version>
+    <version>0.7.6</version>
   </parent>
   <groupId>org.jrebirth</groupId>
   <artifactId>preloader</artifactId>
-  <version>0.7.6-SNAPSHOT</version>
+  <version>0.7.6</version>
   <name>preloader</name>
   <url>http://maven.apache.org</url>
   <properties>
