--- a/org.jrebirth/sample/pom.xml
+++ b/org.jrebirth/sample/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>jrebirth</artifactId>
 		<groupId>org</groupId>
-		<version>0.7.6-SNAPSHOT</version>
+		<version>0.7.6</version>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
@@ -168,13 +168,13 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.6-SNAPSHOT</version>
+			<version>0.7.6</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>preloader</artifactId>
-			<version>0.7.6-SNAPSHOT</version>
+			<version>0.7.6</version>
 		</dependency>
 
 	</dependencies>
