--- a/org.jrebirth/showcase/pom.xml
+++ b/org.jrebirth/showcase/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>jrebirth</artifactId>
 		<groupId>org</groupId>
-		<version>0.7.6-SNAPSHOT</version>
+		<version>0.7.6</version>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
@@ -178,7 +178,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.6-SNAPSHOT</version>
+			<version>0.7.6</version>
 		</dependency>
 
 	</dependencies>
