--- a/org.jrebirth/distribution/pom.xml
+++ b/org.jrebirth/distribution/pom.xml
@@ -9,6 +9,8 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>distribution</artifactId>
+	<version>0.7.6</version>
+
 	<packaging>pom</packaging>
 
 	<name>Distribution</name>
