--- a/org.jrebirth/fxform/pom.xml
+++ b/org.jrebirth/fxform/pom.xml
@@ -10,6 +10,9 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>fxform</artifactId>
+	<version>0.7.6</version>
+	<packaging>jar</packaging>
+
 	<name>FXForm</name>
 	<description>Integration of FXForm into JRebirth</description>
 
