--- a/org.jrebirth/archetype/pom.xml
+++ b/org.jrebirth/archetype/pom.xml
@@ -10,8 +10,29 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>archetype</artifactId>
-	
+	<packaging>maven-archetype</packaging>
+
 	<name>Application Archetype</name>
 	<description>JRebirth Archetype used to build a new fresh application</description>
+
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.archetype</groupId>
+				<artifactId>archetype-packaging</artifactId>
+				<version>2.2</version>
+			</extension>
+		</extensions>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-archetype-plugin</artifactId>
+					<version>2.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
