--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -64,8 +64,30 @@
 		<connection>scm:git:git://github.com/JRebirth/JRebirth.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/JRebirth/JRebirth.git</developerConnection>
 		<url>https://github.com/JRebirth/JRebirth</url>
-		<tag>HEAD</tag>
 	</scm>
+
+	<licenses>
+		<license>
+			<name>Apache License</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+			<distribution>repo</distribution>
+			<comments>Version 2.0, January 2004</comments>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>jr1</id>
+			<name>Bordes Sébastien</name>
+			<email>seb@jrebirth.org</email>
+			<url>blog.webeo.fr</url>
+			<organization>JRebirth</organization>
+			<organizationUrl>www.jrebirth.org</organizationUrl>
+			<roles>
+				<role>JRebirth Designer</role>
+			</roles>
+		</developer>
+	</developers>
 
 	<!-- <organization> <name>JRebirth OSS</name> <url>http://www.jrebirth.org</url> </organization> <licenses> <license> <name>Apache License</name> <url>http://www.apache.org/licenses/LICENSE-2.0.html</url> 
 		<distribution>repo</distribution> <comments>Version 2.0, January 2004</comments> </license> </licenses> <mailingLists> <mailingList> <name>JRebirth Developers Google Group</name> <archive>groups.google.com/group/jrebirth-developers</archive> 
@@ -101,63 +123,11 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
-<!-- 
-			<plugin>
-				<groupId>org.apache.maven.doxia</groupId>
-				<artifactId>doxia-book-maven-plugin</artifactId>
-				<version>1.3-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<phase>pre-site</phase>
-						<goals>
-							<goal>render-books</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<books>
-						<book>
-							<directory>src/site/jrebirth-book</directory>
-							<descriptor>src/site/jrebirth-book.xml</descriptor>
-							<formats>
-								<format>
-									<id>latex</id>
-								</format>
-								<format>
-									<id>xdoc</id>
-								</format>
-								<format>
-									<id>pdf</id>
-								</format>
-								<format>
-									<id>rtf</id>
-								</format>
-							</formats>
-						</book>
-					</books>
-				</configuration>
-
-				<dependencies>
-
-					<dependency>
-						<groupId>org.apache.maven.doxia</groupId>
-						<artifactId>doxia-core</artifactId>
-						<version>1.4</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.maven.doxia</groupId>
-						<artifactId>doxia-module-fml</artifactId>
-						<version>1.4</version>
-					</dependency>
-					<dependency>
-						<groupId>org.tinyjee.dim</groupId>
-						<artifactId>doxia-include-macro</artifactId>
-						<version>1.1</version>
-					</dependency>
-				</dependencies>
-
-			</plugin>
- -->
+			<!-- <plugin> <groupId>org.apache.maven.doxia</groupId> <artifactId>doxia-book-maven-plugin</artifactId> <version>1.3-SNAPSHOT</version> <executions> <execution> <phase>pre-site</phase> <goals> <goal>render-books</goal> 
+				</goals> </execution> </executions> <configuration> <books> <book> <directory>src/site/jrebirth-book</directory> <descriptor>src/site/jrebirth-book.xml</descriptor> <formats> <format> <id>latex</id> </format> 
+				<format> <id>xdoc</id> </format> <format> <id>pdf</id> </format> <format> <id>rtf</id> </format> </formats> </book> </books> </configuration> <dependencies> <dependency> <groupId>org.apache.maven.doxia</groupId> 
+				<artifactId>doxia-core</artifactId> <version>1.4</version> </dependency> <dependency> <groupId>org.apache.maven.doxia</groupId> <artifactId>doxia-module-fml</artifactId> <version>1.4</version> </dependency> 
+				<dependency> <groupId>org.tinyjee.dim</groupId> <artifactId>doxia-include-macro</artifactId> <version>1.1</version> </dependency> </dependencies> </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
