--- a/org.jrebirth/preloader/pom.xml
+++ b/org.jrebirth/preloader/pom.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org</groupId>
-    <artifactId>jrebirth</artifactId>
-    <version>0.7.6</version>
-  </parent>
-  <groupId>org.jrebirth</groupId>
-  <artifactId>preloader</artifactId>
-  <version>0.7.6</version>
-  <name>preloader</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org</groupId>
+		<artifactId>jrebirth</artifactId>
+		<version>0.7.6</version>
+	</parent>
+	<groupId>org.jrebirth</groupId>
+	<artifactId>preloader</artifactId>
+	<version>0.7.6</version>
+	<packaging>jar</packaging>
+	
+	<name>preloader</name>
+	<description>JRebirth Preloader for JavaFX applications</description>
 
-  </dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<dependencies>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+
 </project>
