--- a/org.jrebirth/showcase/undoredo/pom.xml
+++ b/org.jrebirth/showcase/undoredo/pom.xml
@@ -5,10 +5,12 @@
 		<artifactId>showcase</artifactId>
 		<version>0.7.6</version>
 	</parent>
-	
+
 	<groupId>org.jrebirth.showcase</groupId>
 	<artifactId>undoredo</artifactId>
-	
+	<version>0.7.6</version>
+	<packaging>jar</packaging>
+
 	<name>Undo Redo</name>
 	<description>Sample application to describe Undo Redo features</description>
 
