--- a/org.jrebirth/undoredo/pom.xml
+++ b/org.jrebirth/undoredo/pom.xml
@@ -7,6 +7,9 @@
 	</parent>
 	<groupId>org.jrebirth</groupId>
 	<artifactId>undoredo</artifactId>
+	<version>0.7.6</version>
+	<packaging>jar</packaging>
+
 	<name> Undo/Redo</name>
 	<description>Provide Undo/Redo features for JRebirth commands</description>
 
