--- a/org.jrebirth/distribution/pom.xml
+++ b/org.jrebirth/distribution/pom.xml
@@ -3,14 +3,12 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.6</version>
-		<relativePath>../</relativePath>
+		<version>0.7.7-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>distribution</artifactId>
-	<version>0.7.6</version>
-
 	<packaging>pom</packaging>
 
 	<name>Distribution</name>
