--- a/org.jrebirth/fxform/pom.xml
+++ b/org.jrebirth/fxform/pom.xml
@@ -4,13 +4,12 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>fxform</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 
 	<name>FXForm</name>
@@ -21,7 +20,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
