--- a/org.jrebirth/analyzer/pom.xml
+++ b/org.jrebirth/analyzer/pom.xml
@@ -3,12 +3,11 @@
 	<parent>
 		<artifactId>jrebirth</artifactId>
 		<groupId>org</groupId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth</groupId>
 	<artifactId>analyzer</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 
 	<name>Analyzer</name>
@@ -73,7 +72,7 @@
 
 							<!-- not automated yet -->
 							<JavaFX-Class-Path>logback-classic-1.0.13.jar logback-core-1.0.13.jar slf4j-api
-								-1.7.5.jar core-0.7.6.jar</JavaFX-Class-Path>
+								-1.7.5.jar core-0.7.7-SNAPSHOT.jar</JavaFX-Class-Path>
 
 							<Permissions>${permissions}</Permissions>
 							<Codebase>${deployUrl}</Codebase>
@@ -176,13 +175,13 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>preloader</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
