--- a/org.jrebirth/component/pom.xml
+++ b/org.jrebirth/component/pom.xml
@@ -3,13 +3,12 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>component</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 
 	<name>Components</name>
@@ -19,7 +18,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
