--- a/org.jrebirth/preloader/pom.xml
+++ b/org.jrebirth/preloader/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth</groupId>
 	<artifactId>preloader</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 	
 	<name>preloader</name>
