--- a/org.jrebirth/showcase/fxml/pom.xml
+++ b/org.jrebirth/showcase/fxml/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>showcase</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>org.jrebirth.showcase</groupId>
 	<artifactId>fxml</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 
 	<name>FXML</name>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>component</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
