--- a/org.jrebirth/showcase/undoredo/pom.xml
+++ b/org.jrebirth/showcase/undoredo/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>showcase</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>org.jrebirth.showcase</groupId>
 	<artifactId>undoredo</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 
 	<name>Undo Redo</name>
@@ -50,8 +50,9 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>undoredo</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
+		
 	</dependencies>
 
 </project>
