--- a/org.jrebirth/undoredo/pom.xml
+++ b/org.jrebirth/undoredo/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org</groupId>
 		<artifactId>jrebirth</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 	<groupId>org.jrebirth</groupId>
 	<artifactId>undoredo</artifactId>
-	<version>0.7.6</version>
 	<packaging>jar</packaging>
 
 	<name> Undo/Redo</name>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
-			<version>0.7.6</version>
+			<version>0.7.7-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
