--- a/org.jrebirth/analyzer/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth/analyzer/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,8 +1,9 @@
-#Sun Oct 23 23:05:36 CEST 2011
 analyseLocally=false
 eclipse.preferences.version=1
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
 projectArtifactId=analyzer
 projectBranch=
 projectGroupId=org.jrebirth
+projectKey=org.jrebirth\:analyzer
 serverUrl=http\://quality.jrebirth.org
-version=1
+version=2
