--- a/org.jrebirth/component/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth/component/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,7 +1,9 @@
 analyseLocally=false
 eclipse.preferences.version=1
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
 projectArtifactId=component
 projectBranch=
 projectGroupId=org.jrebirth
+projectKey=org.jrebirth\:component
 serverUrl=http\://quality.jrebirth.org
-version=1
+version=2
