--- a/org.jrebirth/presentation/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth/presentation/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,6 +1,6 @@
 analyseLocally=false
 eclipse.preferences.version=1
-extraProperties=
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
 lastAnalysisDate=1373275994000
 projectArtifactId=presentation
 projectBranch=
